# fastapi-devinotes

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 59cb8a21fbeb_first_migration.py
app/: main.py
app/api/: deps.py
app/api/routers/: auth_router.py  labels_router.py  notes_router.py  shares_router.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  label.py  note.py  share.py  user.py
app/repositories/: label_repository.py  note_repository.py  share_repository.py  user_repository.py
app/services/: auth_service.py  label_service.py  note_service.py  share_service.py
